(executable
 (name ReasonGuestLoginOidcClientApp)
 (public_name ReasonGuestLoginOidcClientApp.exe)
 (libraries lwt logs logs.fmt fmt.tty guest_login.library guest_login.oidc
   morph morph_server_http)
 (package guest_login)
 (ocamlopt_flags -O3))

(env
 (docker
  (flags
   (:standard -ccopt -static -verbose))))
