(library
    (name TestReasonGuestLoginOidcClient)
    (public_name test-reason-guest-login-oidc-client.lib)
    (ocamlopt_flags -linkall -g)
    (flags (:standard -w -9))
    (libraries reason-guest-login-oidc-client.http
        reason-guest-login-oidc-client.library
        reason-guest-login-oidc-client.oidc rely.lib)
    (modules
        (:standard \ RunTests)))

(test
    (package test-reason-guest-login-oidc-client)
    (name RunTests)
    (libraries test-reason-guest-login-oidc-client.lib)
    (modules RunTests))